move dist to server

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -25,5 +25,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["./src"],
-  "exclude": ["./dist"]
+  "exclude": ["../server/dist"]
 }
